# labelgen

./: .gitignore  README.md  pyproject.toml
benchmark/: run_benchmark.py  summarize_results.py
docs/: public_api.md
examples/: basic_usage.py  custom_config.py  llm_extraction.py  save_and_load.py
src/labelgen/: __init__.py  config.py  types.py
src/labelgen/community/: __init__.py  connected_components_detector.py  detector.py  leiden_detector.py
src/labelgen/extraction/: __init__.py  concept_extractor.py  filtering.py  heuristic_extractor.py  llm_extractor.py  llm_provider.py  normalization.py  spacy_extractor.py
src/labelgen/graph/: __init__.py  builder.py  concept_graph.py
src/labelgen/io/: serialize.py
src/labelgen/labeling/: __init__.py  assigner.py  verbalizer.py
src/labelgen/pipeline/: label_generator.py
src/labelgen/preprocessing/: __init__.py  cleanup.py  paragraphs.py
tests/: test_benchmark.py  test_cleanup.py  test_community.py  test_filtering.py  test_graph.py  test_labeling.py  test_llm_extraction.py  test_llm_provider.py  test_paragraphs.py  test_pipeline.py  test_selection.py  test_serialize.py  test_verbalizer.py
