[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "paralabelgen"
version = "0.2.1"
description = "A Python library for generating discrete paragraph labels from concept extraction, graph communities, and interpretable assignment rules, with heuristic, spaCy, and provider-backed LLM extraction modes."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "huruilizhen", email = "huruilizhen@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
  "spacy>=3.8.0,<4.0.0",
  "igraph>=0.11.0,<0.12.0",
  "leidenalg>=0.10.0,<0.11.0",
]
keywords = ["nlp", "labels", "graph", "community-detection", "paragraphs", "llm"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/HuRuilizhen/labelgen"
Repository = "https://github.com/HuRuilizhen/labelgen"
Issues = "https://github.com/HuRuilizhen/labelgen/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/labelgen"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/labelgen",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/docs",
  "/tests",
  "/examples",
  "/experiment",
  "/WORKSPACE.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
